--- a/style.css
+++ b/style.css
@@ -5,11 +5,27 @@ body {
   padding: 20px;
 }
 
-h1, h2 {
+h1 {
   color: #333;
 }
 
-button {
+.tabs {
+  margin-bottom: 15px;
+}
+
+.tab-button {
+  padding: 10px 15px;
+  margin: 0 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.tab-button.active {
+  background-color: #add8e6;
+  border-radius: 5px;
+}
+
+button[data-weather] {
   font-size: 24px;
   padding: 10px 15px;
   margin: 5px;
@@ -21,13 +37,19 @@ button {
   font-size: 28px;
 }
 
-#diary-list {
-  list-style: none;
-  padding: 0;
-  margin-top: 15px;
+#calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 40px);
+  grid-gap: 5px;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-#diary-list li {
-  margin: 5px 0;
+.day {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   font-size: 20px;
 }
